# LogarithmPlotter

./: .gitignore  .gitmodules  .mocharc.jsonc  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  build-macosx.sh  build-windows.bat  build-wine.sh  logplotter.desktop  package-linux.sh  package-lock.json  package-macosx.sh  package-windows.bat  package-wine.sh  package.json  pyproject.toml  rollup.config.mjs  run.py  setup.py  snapcraft.yaml
.drone/: .drone.yml  test1.lpf
runtime-pyside6/: .coverage  MANIFEST.in  pyproject.toml  setup.py
runtime-pyside6/LogarithmPlotter/: __init__.py  logarithmplotter.py
runtime-pyside6/LogarithmPlotter/qml/eu/ad5001/LogarithmPlotter/: AppMenuBar.qml  LogGraphCanvas.qml  LogarithmPlotter.qml  PickLocationOverlay.qml  Settings.qml  ViewPositionChangeOverlay.qml  qmldir
runtime-pyside6/LogarithmPlotter/qml/eu/ad5001/LogarithmPlotter/Common/: qmldir
runtime-pyside6/LogarithmPlotter/qml/eu/ad5001/LogarithmPlotter/History/: Browser.qml  History.qml  HistoryBrowser.qml  HistoryItem.qml  SingleItem.qml  qmldir
runtime-pyside6/LogarithmPlotter/util/: config.py  debug.py  helper.py  js.py  latex.py  native.py  promise.py  update.py
runtime-pyside6/tests/: spy.py  test_config.py  test_debug.py  test_helper.py  test_latex.py  test_main.py  test_native.py  test_promise.py  test_pyjs.py  test_update.py
runtime-pyside6/tests/plugins/natural/: __init__.py  spy.py  that.py
runtime-pyside6/tests/plugins/natural/interfaces/: assertion.py  base.py  basic.py  int.py  spy.py  utils.py
runtime-pyside6/tests/plugins/tests/: test_natural.py
(+398 files in other folders)
